@@ -336,8 +336,8 @@ namespace lsp
                 float x     = *(in++);
                 if (x < 0.0f)
                     x       = -x;
-                if (x < FLOAT_SAT_N_INF)
-                    x       = FLOAT_SAT_N_INF;
+                if (x < FLOAT_SAT_M_INF)
+                    x       = FLOAT_SAT_M_INF;
                 else if (x > FLOAT_SAT_P_INF)
                     x       = FLOAT_SAT_P_INF;
 
@@ -357,8 +357,8 @@ namespace lsp
 
             if (in < 0.0f)
                 in      = -in;
-            if (in < FLOAT_SAT_N_INF)
-                in      = FLOAT_SAT_N_INF;
+            if (in < FLOAT_SAT_M_INF)
+                in      = FLOAT_SAT_M_INF;
             else if (in > FLOAT_SAT_P_INF)
                 in      = FLOAT_SAT_P_INF;
 
@@ -380,8 +380,8 @@ namespace lsp
                 float x     = *(in++);
                 if (x < 0.0f)
                     x       = -x;
-                if (x < FLOAT_SAT_N_INF)
-                    x       = FLOAT_SAT_N_INF;
+                if (x < FLOAT_SAT_M_INF)
+                    x       = FLOAT_SAT_M_INF;
                 else if (x > FLOAT_SAT_P_INF)
                     x       = FLOAT_SAT_P_INF;
 
@@ -401,8 +401,8 @@ namespace lsp
 
             if (in < 0.0f)
                 in      = -in;
-            if (in < FLOAT_SAT_N_INF)
-                in      = FLOAT_SAT_N_INF;
+            if (in < FLOAT_SAT_M_INF)
+                in      = FLOAT_SAT_M_INF;
             else if (in > FLOAT_SAT_P_INF)
                 in      = FLOAT_SAT_P_INF;
 
@@ -445,8 +445,8 @@ namespace lsp
 
             if (in < 0.0f)
                 in      = -in;
-            if (in < FLOAT_SAT_N_INF)
-                in      = FLOAT_SAT_N_INF;
+            if (in < FLOAT_SAT_M_INF)
+                in      = FLOAT_SAT_M_INF;
             else if (in > FLOAT_SAT_P_INF)
                 in      = FLOAT_SAT_P_INF;
 
