@@ -15,6 +15,7 @@
   it's own delay.
 * Fixed ALR distortion issue for the dspu::Limiter module.
 * Added dspu::SurgeProtector module.
+* Fixed bug in dspu::DynamicProcessor which could produce NaNs.
 * Updated build scripts.
 
 === 1.0.11 ===
